using UnityEngine;

namespace My2DGame
{
    /// <summary>
    /// 애니메이션 파라미터 문자열 클래스
    /// </summary>
    public class AnimationString
    {
        public static string IsMove = "IsMove";
        public static string IsRun = "IsRun";
        public static string IsWall = "IsWall";
        public static string JumpTrigger = "JumpTrigger";
        public static string IsGrounded = "IsGrounded";
        public static string Yvelocity = "Yvelocity";
        public static string AttackTrigger = "AttackTrigger";
    }
}